added about, services tours, contact and gallery sections

--- a/index.html
+++ b/index.html
@@ -15,32 +15,285 @@
     <!-- styles css -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!-- header  -->
+    <!-- navbar -->
+    <!-- hero -->
     <div class="hero">
       <div class="hero-banner">
         <h1>continue exploring</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut enim quisquam quasi placeat amet maxime.</p>
-        <a href="#featured" class="btn btn-hero scroll-link">explore tours</a>
+        <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
       </div>
     </div>
     <!-- end of header  -->
 
     <!-- about section -->
+    <section class="section" id="about">
+      <!-- title -->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!-- end of title -->
+      <div class="section-center about-center">
+        <!-- about img wrapper -->
+        <article class="about-img">
+          <img src="./images/about.jpeg" class="about-photo" alt="awesome beach"> 
+        </article>
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, autem? Accusantium delectus sit repellat culpa consectetur est voluptate, facilis reprehenderit? Deserunt voluptatum commodi placeat assumenda sit quos quas, perspiciatis a?</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum, autem? Accusantium delectus sit repellat culpa consectetur est voluptate, facilis reprehenderit? Deserunt voluptatum commodi placeat assumenda sit quos quas, perspiciatis a?</p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
 
     <!-- services -->
+    <section class="section services" id="services">
+      <!-- title -->
+      <div class="section-title">
+          <h2>our <span>services</span></h2>
+      </div>
+      <!-- end of section-title -->
+      <div class="section-center services-center">
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">saving money</h4>
+            <p class="service-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis facere maiores iusto rem repellat odit.</p>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">endless biking</h4>
+            <p class="service-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis facere maiores iusto rem repellat odit.</p>
+          </div>
+        </article>
+        <!-- end of single service -->
+        <!-- single service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis facere maiores iusto rem repellat odit.</p>
+          </div>
+        </article>
+        <!-- end of single service -->
+      </div>
+    </section>
     <!--end services -->
 
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <!-- title -->
+      <div class="section-title">
+          <h2>featured <span>tours</span></h2>
+      </div>
+      <!-- end of section-title -->
+      <!-- featured-center -->
+      <section class="section-center featured-center">
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpeg" alt="tour" class="tour-img">
+            <p class="tour-date">august 1st, 2021</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>tibet adventure</h4>
+              <p>11 days</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quia qui voluptatibus placeat odio magnam eius perspiciatis officia obcaecati possimus.</p>
+            <div class="tour-footer">
+              <p><span>
+                <i class="fas fa-map"></i>
+                china
+              </span></p>
+              <p>from $1400</p>
+            </div>
+          </div>
+          
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpeg" alt="" class="tour-img">
+            <p class="tour-date">sept 27th, 2021</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>best of malaysia</h4>
+              <p>6 days</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quia qui voluptatibus placeat odio magnam eius perspiciatis officia obcaecati possimus.</p>
+            <div class="tour-footer">
+              <p><span>
+                <i class="fas fa-map"></i>
+                indonesia
+              </span></p>
+              <p>from $1100</p>
+            </div>
+          </div>
+
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpeg" alt="" class="tour-img">
+            <p class="tour-date">oct 15th, 2021</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>explore hong kong</h4>
+              <p>12 days</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quia qui voluptatibus placeat odio magnam eius perspiciatis officia obcaecati possimus.</p>
+            <div class="tour-footer">
+              <p><span>
+                <i class="fas fa-map"></i>
+                hong kong
+              </span></p>
+              <p>from $2700</p>
+            </div>
+          </div>
+          
+        </article>
+        <!-- end of single tour -->
+        <!-- single tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpeg" alt="" class="tour-img">
+            <p class="tour-date">nov 11th, 2021</p>
+          </div>
+          <!-- tour info -->
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>kenya highlights</h4>
+              <p>22 days</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quia qui voluptatibus placeat odio magnam eius perspiciatis officia obcaecati possimus.</p>
+            <div class="tour-footer">
+              <p><span>
+              <i class="fas fa-map"></i>
+                kenya
+              </span></p>
+              <p>from $5100</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of single tour -->
+      </section>
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
 
     <!-- contact -->
-
+    <section class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <!-- contact title -->
+        <article class="contact-title">
+          <h3>want latest tour information and updates?</h3>
+          <p>Sign up for our newsletter and stay up to date!</p>
+        </article>
+        <!-- contact form -->
+        <form action="" class="contact-form">
+          <input type="email" name="email" id="email" class="form-control" placeholder="your email">
+          <button type="submit" class="btn-submit">submit</button>
+        </form>
+      </div>
+    </section>
     <!-- end of contact -->
 
     <!-- gallery  -->
-
+    <section id="gallery">
+      <div class="gallery-center">
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-3.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-4.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-5.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-6.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" alt="tour" class="gallery-img">
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of single item -->
+      </div>
+    </section>
     <!-- end of gallery  -->
 
     <!-- footer -->
