--- a/index.html
+++ b/index.html
@@ -297,7 +297,59 @@
     <!-- end of gallery  -->
 
     <!-- footer -->
-
+    <footer class="section footer">
+      <!-- footer links -->
+      <ul class="footer-links">
+        <!-- single list -->
+        <li>
+          <a href="#home" class="footer-link scroll-link">home</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single list -->
+        <li>
+          <a href="#about" class="footer-link scroll-link">about</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single list -->
+        <li>
+          <a href="#services" class="footer-link scroll-link">services</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single list -->
+        <li>
+          <a href="#featured" class="footer-link scroll-link">featured</a>
+        </li>
+        <!-- end of single link -->
+        <!-- single list -->
+        <li>
+          <a href="#gallery" class="footer-link scroll-link">gallery</a>
+        </li>
+        <!-- end of single link -->
+      </ul>
+      <!-- end of footer links -->
+      <!-- footer icons -->
+      <ul class="footer-icons">
+        <!-- single icon -->
+        <li>
+          <a href="https://www.twitter.com" target="_blank" class="footer-icon"><i class="fab fa-twitter"></i></a>
+        </li>
+        <!-- end of single icon -->
+          <!-- single icon -->
+        <li>
+          <a href="https://www.facebook.com" target="_blank" class="footer-icon"><i class="fab fa-facebook"></i></a>
+        </li>
+        <!-- end of single icon -->
+          <!-- single icon -->
+        <li>
+          <a href="https://www.squarespace.com" target="_blank" class="footer-icon"><i class="fab fa-squarespace"></i></a>
+        </li>
+        <!-- end of single icon -->
+      </ul>
+      <!-- end of footer icons -->
+      <p class="copyright">
+        copyright &copy; backroads travel tour company <span id="date"></span>, all rights reserved.
+      </p>
+    </footer>
     <!-- js -->
     <script src="./js/app.js"></script>
   </body>
