--- a/index.html
+++ b/index.html
@@ -18,15 +18,82 @@
 
   <body>
     <!-- header  -->
-    <!-- navbar -->
-    <!-- hero -->
-    <div class="hero">
-      <div class="hero-banner">
-        <h1>continue exploring</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut enim quisquam quasi placeat amet maxime.</p>
-        <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+    <header id="home">
+
+      <!-- navbar -->
+      <nav class="navbar">
+        <div class="nav-center">
+
+          <!-- nav header -->
+          <div class="nav-header">
+            <img src="./images/logo.svg" class="nav-logo" alt="logo">
+            <button class="nav-toggle" id="nav-toggle"><i class="fas fa-bars"></i></button>
+          </div>
+          <!-- end of nav header -->
+
+          <!-- nav links -->
+          <ul class="nav-links" id="nav-links">
+            <!-- single list -->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <!-- end of single link -->
+            <!-- single list -->
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <!-- end of single link -->
+            <!-- single list -->
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <!-- end of single link -->
+            <!-- single list -->
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <!-- end of single link -->
+            <!-- single list -->
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+            <!-- end of single link -->
+          </ul>
+          <!-- end of nav links -->
+
+          <!-- nav icons -->
+          <ul class="nav-icons">
+            <!-- single icon -->
+            <li>
+              <a href="https://www.twitter.com" target="_blank" class="nav-icon"><i class="fab fa-twitter"></i></a>
+            </li>
+            <!-- end of single icon -->
+              <!-- single icon -->
+            <li>
+              <a href="https://www.facebook.com" target="_blank" class="nav-icon"><i class="fab fa-facebook"></i></a>
+            </li>
+            <!-- end of single icon -->
+              <!-- single icon -->
+            <li>
+              <a href="https://www.squarespace.com" target="_blank" class="nav-icon"><i class="fab fa-squarespace"></i></a>
+            </li>
+            <!-- end of single icon -->
+          </ul>
+          <!-- end of nav icons -->
+
+        </div>
+      </nav>
+      <!-- end of navbar -->
+
+      <!-- hero -->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1>continue exploring</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut enim quisquam quasi placeat amet maxime.</p>
+          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+        </div>
       </div>
-    </div>
+    </header>
     <!-- end of header  -->
 
     <!-- about section -->
